parser/gen/ru/mipt/acsl/decode/parser/DecodeParser.java
// This is a generated file. Not intended for manual editing.
package ru.mipt.acsl.decode.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static ru.mipt.acsl.decode.parser.psi.DecodeTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class DecodeParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == ALIAS_DECL) {
      r = alias_decl(b, 0);
    }
    else if (t == ARRAY_TYPE_APPLICATION) {
      r = array_type_application(b, 0);
    }
    else if (t == BOOL_LITERAL) {
      r = bool_literal(b, 0);
    }
    else if (t == COMMAND_ARG) {
      r = command_arg(b, 0);
    }
    else if (t == COMMAND_ARGS) {
      r = command_args(b, 0);
    }
    else if (t == COMMAND_CALL) {
      r = command_call(b, 0);
    }
    else if (t == COMMAND_DECL) {
      r = command_decl(b, 0);
    }
    else if (t == COMPONENT_DECL) {
      r = component_decl(b, 0);
    }
    else if (t == COMPONENT_PARAMETERS_DECL) {
      r = component_parameters_decl(b, 0);
    }
    else if (t == COMPONENT_REF) {
      r = component_ref(b, 0);
    }
    else if (t == DEFAULT_LANGUAGE_DECL) {
      r = default_language_decl(b, 0);
    }
    else if (t == ELEMENT_ID) {
      r = element_id(b, 0);
    }
    else if (t == ELEMENT_INFO) {
      r = element_info(b, 0);
    }
    else if (t == ELEMENT_NAME_RULE) {
      r = element_name_rule(b, 0);
    }
    else if (t == ENTITY_ID) {
      r = entity_id(b, 0);
    }
    else if (t == ENUM_TYPE_DECL) {
      r = enum_type_decl(b, 0);
    }
    else if (t == ENUM_TYPE_VALUE) {
      r = enum_type_value(b, 0);
    }
    else if (t == ENUM_TYPE_VALUES) {
      r = enum_type_values(b, 0);
    }
    else if (t == EVENT_MESSAGE) {
      r = event_message(b, 0);
    }
    else if (t == EVENT_MESSAGE_PARAMETERS_DECL) {
      r = event_message_parameters_decl(b, 0);
    }
    else if (t == EVENT_PARAMETER_DECL) {
      r = event_parameter_decl(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0);
    }
    else if (t == FINAL_ENUM) {
      r = final_enum(b, 0);
    }
    else if (t == FLOAT_LITERAL) {
      r = float_literal(b, 0);
    }
    else if (t == GENERIC_ARG) {
      r = generic_arg(b, 0);
    }
    else if (t == GENERIC_ARGS) {
      r = generic_args(b, 0);
    }
    else if (t == GENERIC_PARAMETERS) {
      r = generic_parameters(b, 0);
    }
    else if (t == IMPORT_ELEMENT) {
      r = import_element(b, 0);
    }
    else if (t == IMPORT_ELEMENT_AS) {
      r = import_element_as(b, 0);
    }
    else if (t == IMPORT_ELEMENT_STAR) {
      r = import_element_star(b, 0);
    }
    else if (t == IMPORT_STMT) {
      r = import_stmt(b, 0);
    }
    else if (t == LENGTH_FROM) {
      r = length_from(b, 0);
    }
    else if (t == LENGTH_TO) {
      r = length_to(b, 0);
    }
    else if (t == LITERAL) {
      r = literal(b, 0);
    }
    else if (t == MESSAGE_DECL) {
      r = message_decl(b, 0);
    }
    else if (t == NAMESPACE_DECL) {
      r = namespace_decl(b, 0);
    }
    else if (t == NATIVE_TYPE_DECL) {
      r = native_type_decl(b, 0);
    }
    else if (t == NUMERIC_LITERAL) {
      r = numeric_literal(b, 0);
    }
    else if (t == OPTIONAL) {
      r = optional(b, 0);
    }
    else if (t == PARAMETER_DECL) {
      r = parameter_decl(b, 0);
    }
    else if (t == PARAMETER_ELEMENT) {
      r = parameter_element(b, 0);
    }
    else if (t == RANGE_DECL) {
      r = range_decl(b, 0);
    }
    else if (t == SCRIPT_DECL) {
      r = script_decl(b, 0);
    }
    else if (t == SIMPLE_OR_GENERIC_TYPE_APPLICATION) {
      r = simple_or_generic_type_application(b, 0);
    }
    else if (t == STATUS_MESSAGE) {
      r = status_message(b, 0);
    }
    else if (t == STATUS_MESSAGE_PARAMETERS_DECL) {
      r = status_message_parameters_decl(b, 0);
    }
    else if (t == STRING_LITERAL) {
      r = string_literal(b, 0);
    }
    else if (t == STRING_VALUE) {
      r = string_value(b, 0);
    }
    else if (t == STRUCT_TYPE_DECL) {
      r = struct_type_decl(b, 0);
    }
    else if (t == TYPE_APPLICATION) {
      r = type_application(b, 0);
    }
    else if (t == TYPE_DECL) {
      r = type_decl(b, 0);
    }
    else if (t == TYPE_DECL_BODY) {
      r = type_decl_body(b, 0);
    }
    else if (t == TYPE_UNIT_APPLICATION) {
      r = type_unit_application(b, 0);
    }
    else if (t == UNIT) {
      r = unit(b, 0);
    }
    else if (t == UNIT_DECL) {
      r = unit_decl(b, 0);
    }
    else if (t == VAR_EXPR) {
      r = var_expr(b, 0);
    }
    else if (t == VAR_PARAMETER_ELEMENT) {
      r = var_parameter_element(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return decodeFile(b, l + 1);
  }

  /* ********************************************************** */
  // element_info? ALIAS element_name_rule type_application
  public static boolean alias_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<alias decl>");
    r = alias_decl_0(b, l + 1);
    r = r && consumeToken(b, ALIAS);
    r = r && element_name_rule(b, l + 1);
    r = r && type_application(b, l + 1);
    exit_section_(b, l, m, ALIAS_DECL, r, false, null);
    return r;
  }

  // element_info?
  private static boolean alias_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "alias_decl_0")) return false;
    element_info(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LEFT_BRACKET type_application (COMMA length_from (DOTS (length_to | STAR))?)? RIGHT_BRACKET
  public static boolean array_type_application(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application")) return false;
    if (!nextTokenIs(b, LEFT_BRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LEFT_BRACKET);
    r = r && type_application(b, l + 1);
    r = r && array_type_application_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACKET);
    exit_section_(b, m, ARRAY_TYPE_APPLICATION, r);
    return r;
  }

  // (COMMA length_from (DOTS (length_to | STAR))?)?
  private static boolean array_type_application_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2")) return false;
    array_type_application_2_0(b, l + 1);
    return true;
  }

  // COMMA length_from (DOTS (length_to | STAR))?
  private static boolean array_type_application_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && length_from(b, l + 1);
    r = r && array_type_application_2_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (DOTS (length_to | STAR))?
  private static boolean array_type_application_2_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2")) return false;
    array_type_application_2_0_2_0(b, l + 1);
    return true;
  }

  // DOTS (length_to | STAR)
  private static boolean array_type_application_2_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, DOTS);
    r = r && array_type_application_2_0_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // length_to | STAR
  private static boolean array_type_application_2_0_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "array_type_application_2_0_2_0_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = length_to(b, l + 1);
    if (!r) r = consumeToken(b, STAR);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // TRUE | FALSE
  public static boolean bool_literal(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "bool_literal")) return false;
    if (!nextTokenIs(b, "<bool literal>", FALSE, TRUE)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<bool literal>");
    r = consumeToken(b, TRUE);
    if (!r) r = consumeToken(b, FALSE);
    exit_section_(b, l, m, BOOL_LITERAL, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // element_info? element_name_rule COLON type_unit_application
  public static boolean command_arg(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command arg>");
    r = command_arg_0(b, l + 1);
    r = r && element_name_rule(b, l + 1);
    r = r && consumeToken(b, COLON);
    r = r && type_unit_application(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARG, r, false, null);
    return r;
  }

  // element_info?
  private static boolean command_arg_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_arg_0")) return false;
    element_info(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // command_arg (COMMA command_arg)* COMMA?
  public static boolean command_args(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command args>");
    r = command_arg(b, l + 1);
    r = r && command_args_1(b, l + 1);
    r = r && command_args_2(b, l + 1);
    exit_section_(b, l, m, COMMAND_ARGS, r, false, null);
    return r;
  }

  // (COMMA command_arg)*
  private static boolean command_args_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_args_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_args_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA command_arg
  private static boolean command_args_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && command_arg(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // COMMA?
  private static boolean command_args_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_args_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // element_id LEFT_PAREN (expr (COMMA expr)*)? RIGHT_PAREN
  public static boolean command_call(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_call")) return false;
    if (!nextTokenIs(b, "<command call>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command call>");
    r = element_id(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && command_call_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, COMMAND_CALL, r, false, null);
    return r;
  }

  // (expr (COMMA expr)*)?
  private static boolean command_call_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_call_2")) return false;
    command_call_2_0(b, l + 1);
    return true;
  }

  // expr (COMMA expr)*
  private static boolean command_call_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_call_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = expr(b, l + 1);
    r = r && command_call_2_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA expr)*
  private static boolean command_call_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_call_2_0_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!command_call_2_0_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_call_2_0_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA expr
  private static boolean command_call_2_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_call_2_0_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // element_info? COMMAND element_name_rule entity_id? LEFT_PAREN command_args? RIGHT_PAREN
  //     (COLON type_unit_application)? (EQ_SIGN LEFT_BRACE expr* RIGHT_BRACE)?
  public static boolean command_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<command decl>");
    r = command_decl_0(b, l + 1);
    r = r && consumeToken(b, COMMAND);
    r = r && element_name_rule(b, l + 1);
    r = r && command_decl_3(b, l + 1);
    r = r && consumeToken(b, LEFT_PAREN);
    r = r && command_decl_5(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    r = r && command_decl_7(b, l + 1);
    r = r && command_decl_8(b, l + 1);
    exit_section_(b, l, m, COMMAND_DECL, r, false, null);
    return r;
  }

  // element_info?
  private static boolean command_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_0")) return false;
    element_info(b, l + 1);
    return true;
  }

  // entity_id?
  private static boolean command_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_3")) return false;
    entity_id(b, l + 1);
    return true;
  }

  // command_args?
  private static boolean command_decl_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_5")) return false;
    command_args(b, l + 1);
    return true;
  }

  // (COLON type_unit_application)?
  private static boolean command_decl_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_7")) return false;
    command_decl_7_0(b, l + 1);
    return true;
  }

  // COLON type_unit_application
  private static boolean command_decl_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && type_unit_application(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (EQ_SIGN LEFT_BRACE expr* RIGHT_BRACE)?
  private static boolean command_decl_8(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_8")) return false;
    command_decl_8_0(b, l + 1);
    return true;
  }

  // EQ_SIGN LEFT_BRACE expr* RIGHT_BRACE
  private static boolean command_decl_8_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_8_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, EQ_SIGN, LEFT_BRACE);
    r = r && command_decl_8_0_2(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // expr*
  private static boolean command_decl_8_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "command_decl_8_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!expr(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "command_decl_8_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  /* ********************************************************** */
  // element_info? COMPONENT element_name_rule entity_id? (WITH component_ref (COMMA component_ref)*)?
  //     LEFT_BRACE component_parameters_decl? (command_decl|message_decl)* RIGHT_BRACE
  public static boolean component_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<component decl>");
    r = component_decl_0(b, l + 1);
    r = r && consumeToken(b, COMPONENT);
    r = r && element_name_rule(b, l + 1);
    r = r && component_decl_3(b, l + 1);
    r = r && component_decl_4(b, l + 1);
    r = r && consumeToken(b, LEFT_BRACE);
    r = r && component_decl_6(b, l + 1);
    r = r && component_decl_7(b, l + 1);
    r = r && consumeToken(b, RIGHT_BRACE);
    exit_section_(b, l, m, COMPONENT_DECL, r, false, null);
    return r;
  }

  // element_info?
  private static boolean component_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_0")) return false;
    element_info(b, l + 1);
    return true;
  }

  // entity_id?
  private static boolean component_decl_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_3")) return false;
    entity_id(b, l + 1);
    return true;
  }

  // (WITH component_ref (COMMA component_ref)*)?
  private static boolean component_decl_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4")) return false;
    component_decl_4_0(b, l + 1);
    return true;
  }

  // WITH component_ref (COMMA component_ref)*
  private static boolean component_decl_4_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, WITH);
    r = r && component_ref(b, l + 1);
    r = r && component_decl_4_0_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // (COMMA component_ref)*
  private static boolean component_decl_4_0_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_4_0_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_4_0_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // COMMA component_ref
  private static boolean component_decl_4_0_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_4_0_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && component_ref(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // component_parameters_decl?
  private static boolean component_decl_6(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_6")) return false;
    component_parameters_decl(b, l + 1);
    return true;
  }

  // (command_decl|message_decl)*
  private static boolean component_decl_7(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_7")) return false;
    int c = current_position_(b);
    while (true) {
      if (!component_decl_7_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "component_decl_7", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // command_decl|message_decl
  private static boolean component_decl_7_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_decl_7_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = command_decl(b, l + 1);
    if (!r) r = message_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // element_info? PARAMETERS LEFT_PAREN command_args RIGHT_PAREN
  public static boolean component_parameters_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_parameters_decl")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<component parameters decl>");
    r = component_parameters_decl_0(b, l + 1);
    r = r && consumeTokens(b, 0, PARAMETERS, LEFT_PAREN);
    r = r && command_args(b, l + 1);
    r = r && consumeToken(b, RIGHT_PAREN);
    exit_section_(b, l, m, COMPONENT_PARAMETERS_DECL, r, false, null);
    return r;
  }

  // element_info?
  private static boolean component_parameters_decl_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_parameters_decl_0")) return false;
    element_info(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // element_name_rule
  public static boolean component_ref(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "component_ref")) return false;
    if (!nextTokenIs(b, "<component ref>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<component ref>");
    r = element_name_rule(b, l + 1);
    exit_section_(b, l, m, COMPONENT_REF, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // namespace_decl import_stmt* (component_decl | unit_decl | type_decl | alias_decl
  //     | default_language_decl | script_decl)*
  static boolean decodeFile(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = namespace_decl(b, l + 1);
    r = r && decodeFile_1(b, l + 1);
    r = r && decodeFile_2(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // import_stmt*
  private static boolean decodeFile_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!import_stmt(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "decodeFile_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // (component_decl | unit_decl | type_decl | alias_decl
  //     | default_language_decl | script_decl)*
  private static boolean decodeFile_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile_2")) return false;
    int c = current_position_(b);
    while (true) {
      if (!decodeFile_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "decodeFile_2", c)) break;
      c = current_position_(b);
    }
    return true;
  }

  // component_decl | unit_decl | type_decl | alias_decl
  //     | default_language_decl | script_decl
  private static boolean decodeFile_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "decodeFile_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = component_decl(b, l + 1);
    if (!r) r = unit_decl(b, l + 1);
    if (!r) r = type_decl(b, l + 1);
    if (!r) r = alias_decl(b, l + 1);
    if (!r) r = default_language_decl(b, l + 1);
    if (!r) r = script_decl(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // LANGUAGE element_name_rule
  public static boolean default_language_decl(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "default_language_decl")) return false;
    if (!nextTokenIs(b, LANGUAGE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LANGUAGE);
    r = r && element_name_rule(b, l + 1);
    exit_section_(b, m, DEFAULT_LANGUAGE_DECL, r);
    return r;
  }

  /* ********************************************************** */
  // element_name_rule (DOT element_name_rule)*
  public static boolean element_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id")) return false;
    if (!nextTokenIs(b, "<element id>", ELEMENT_NAME_TOKEN, ESCAPED_NAME)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, "<element id>");
    r = element_name_rule(b, l + 1);
    r = r && element_id_1(b, l + 1);
    exit_section_(b, l, m, ELEMENT_ID, r, false, null);
    return r;
  }

  // (DOT element_name_rule)*
  private static boolean element_id_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "element_id_1")) return false;
    int c = current_position_(b);
    while (true) {
      if (!element_id_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "element_id_1", c)) break;
      c = current_position_(b);
    }
    return true;
  }
